--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <title>NamasteFood</title>
   </head>
   <body>
-    <div id="root">
-      <h1>hello</h1>
-    </div>
+    <div id="root"></div>
     <script type="module" src="./App.js"></script>
   </body>
 </html>
